ci: change github action

--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -1,6 +1,10 @@
 name: todo-github-actions
 run-name: ${{ github.actor}} is runing the workflow now
-on : [push]
+on: 
+  push:
+    branches: [ develop ]
+  pull_request:
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
