--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -24,3 +24,21 @@ jobs:
         run: dotnet build --no-restore --configuration Release
       - name: Test with dotnet
         run: dotnet test --no-restore --verbosity quiet
+      
+      - name: Set up Qemu
+        uses: docker/setup-qemu-action@v2
+      - name: setup buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }} 
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: false
+          tags: ${{ secrets.DOCKER_USERNAME }}/minimal-api:latest
