--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -5,6 +5,10 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ main ]
+
+env:
+  APP_TAG: ${{ secrets.DOCKER_USERNAME }}/minimal-api:latest
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,27 +22,44 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }} 
+
       - name: Install dependencies
         run: dotnet restore
+
       - name: Build with dotnet 
         run: dotnet build --no-restore --configuration Release
+
       - name: Test with dotnet
         run: dotnet test --no-restore --verbosity quiet
       
       - name: Set up Qemu
         uses: docker/setup-qemu-action@v2
+
       - name: setup buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }} 
+          password: ${{ secrets.DOCKERHUB_TOKEN }} 
+
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          load: true
+          tags: ${{ env.APP_TAG }}
+
+      - name: Test the image
+        run: |
+          docker run --rm ${{ env.APP_TAG }}
+
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64
-          push: false
-          tags: ${{ secrets.DOCKER_USERNAME }}/minimal-api:latest
+          push: true
+          tags: ${{ env.APP_TAG }}
